<resources>
    <string name="app_name">ParseUser</string>
    <string name="title_activity_login_signup">LoginSignupActivity</string>
    <string name="Welcome">Welcome!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_create_user">Create New User</string>
    <string name="my_contacts">My Messages</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="LoginBtn">Login</string>
    <string name="SignupBtn">Sign Up</string>
    <string name="createUserBtn">Create User</string>
    <string name="LogoutBtn">Log Out</string>
    <string name="welcome">App Name Here</string>
    <string name="title_activity_send_message">SendMessage</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_qr">QRActivity</string>

    <color name="grey">#747474</color>
    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>


    <string name="parse_app_id">YOUR_PARSE_APP_ID</string>
    <string name="parse_client_id">YOUR_PARSE_CLIENT_ID</string>
    <string name="title_activity_sign_up_or_log_in">SignUpOrLogInActivity</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="powered_by">Powered by</string>
    <string name="parse">Parse</string>
    <string name="slogan">The world is your wall</string>
    <string name="title_activity_settings">Settings</string>
    <string name="feet_250">250 feet</string>
    <string name="feet_1000">1000 feet</string>
    <string name="feet_4000">4000 feet</string>
    <string name="search_distance">Search Distance</string>
    <string name="log_out">Log out of Anywall</string>
    <string name="post">Post</string>
    <string name="post_out_of_range">Can\'t view post! Get closer.</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Password Again</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_intro">"Please "</string>
    <string name="error_blank_username">enter a username</string>
    <string name="error_blank_password">enter a password</string>
    <string name="error_mismatched_passwords">enter the same password twice</string>
    <string name="error_join">", and "</string>
    <string name="error_end">.</string>
    <string name="title_activity_message">MessageActivity</string>
</resources>
