<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dip"
    android:background="@drawable/logonew">


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/heading"
        android:text="@string/welcome"/>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" >

        <Button
            android:id="@+id/login"
            android:layout_weight=".5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners_white"
            android:padding="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/LoginBtn" />

        <Button
            android:id="@+id/createUser"
            android:layout_weight=".5"
            android:layout_width="fill_parent"
            android:layout_gravity="end"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:padding="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/createUserBtn" />

    </TableRow>

</RelativeLayout>