<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="10dip">


    <TextView
        android:id="@+id/txtusername"
        android:textColor="@color/black"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Username"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/username"
        android:textColor="@color/grey"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtusername"
        android:inputType="text" />

    <TextView
        android:id="@+id/txtpassword"
        android:textColor="@color/black"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:textSize="18sp"
        android:text="@string/Password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"
        android:layout_below="@+id/txtpassword"
        android:inputType="textPassword" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" >

        <Button
            android:id="@+id/login"
            android:layout_weight=".5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners_white"
            android:padding="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/LoginBtn" />

        <Button
            android:id="@+id/createUser"
            android:layout_weight=".5"
            android:layout_width="fill_parent"
            android:layout_gravity="end"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:padding="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/createUserBtn" />

    </TableRow>

</RelativeLayout>